--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -6,8 +6,8 @@ COPY . /app
 
 RUN pip install --trusted-host pypi.python.org -r requirements.txt
 
-EXPOSE 5000
+EXPOSE 5001
 
 ENV NAME World
 
-CMD ["python", "app.py"]
+CMD ["python3", "app.py"]
