--- a/Frontend/Dockerfile
+++ b/Frontend/Dockerfile
@@ -8,4 +8,4 @@ RUN pip install --trusted-host pypi.python.org -r requirements.txt
 
 EXPOSE 8501
 
-CMD ["streamlit", "run", "streamlit_app.py"]
+CMD ["streamlit", "run", "streamlit_app.py", "--server.port=8501", "--server.address=0.0.0.0"]
