--- a/.github/workflows/Backend_docker.yml
+++ b/.github/workflows/Backend_docker.yml
@@ -14,9 +14,9 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Build the Docker image
-      run: docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/backend-image:latest backend
+      run: docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/backend:latest ${{ secrets.DOCKER_HUB_USERNAME }}/backend
 
     - name: Push the Docker image to Docker Hub
       run: |
         echo ${{ secrets.DOCKER_HUB_PASSWORD }} | docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} --password-stdin
-        docker push ${{ secrets.DOCKER_HUB_USERNAME }}/backend-image:latest
+        docker push ${{ secrets.DOCKER_HUB_USERNAME }}/backend:latest
