--- a/.github/workflows/Backend_docker.yml
+++ b/.github/workflows/Backend_docker.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Build the Docker image
-      run: docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/backend:latest ${{ secrets.DOCKER_HUB_USERNAME }}/backend
+      run: docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/backend:latest
 
     - name: Push the Docker image to Docker Hub
       run: |
