--- a/.github/workflows/Front_test.yml
+++ b/.github/workflows/Front_test.yml
@@ -26,7 +26,7 @@ jobs:
 
     - name: Run Streamlit in background
       run: |
-        cd frontend
+        cd Frontend
         streamlit run streamlit_app.py --server.headless true --server.enableCORS false --server.port 8501 &
         sleep 10  # Allow some time for the server to start
         if ! pgrep -f streamlit; then
