--- a/.github/workflows/Backend.yml
+++ b/.github/workflows/Backend.yml
@@ -1,4 +1,4 @@
-name: Backend
+name: Backend Testing 
 
 on:
   push:
@@ -30,4 +30,4 @@ jobs:
     - name: Run tests
       run: |
         cd Backend
-        pytest
+        pytest 
