--- a/.github/workflows/Backend_docker.yml
+++ b/.github/workflows/Backend_docker.yml
@@ -12,6 +12,11 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
+    
+    
+    - name: Print directory contents
+      run: ls -R
+
 
     - name: Build the Docker image
       run: docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/backend:latest ./backend
