--- a/.github/workflows/Backend_docker.yml
+++ b/.github/workflows/Backend_docker.yml
@@ -20,8 +20,9 @@ jobs:
 
     - name: Build the Docker image
       run: docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/backend:latest ./Backend
+    - name: Login to Docker Hub
+      run: echo "${{ secrets.DOCKER_HUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
+
 
     - name: Push the Docker image to Docker Hub
-      run: |
-        echo ${{ secrets.DOCKER_HUB_PASSWORD }} | docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} --password-stdin
-        docker push ${{ secrets.DOCKER_HUB_USERNAME }}/backend:latest
+      run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/backend:latest
