--- a/.github/workflows/Backend.yml
+++ b/.github/workflows/Backend.yml
@@ -25,7 +25,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pytest
-        pip install -r Backend/requirements.txt
+        pip install --upgrade -r Backend/requirements.txt
 
     - name: Run tests
       run: |
