--- a/.github/workflows/Backend.yml
+++ b/.github/workflows/Backend.yml
@@ -25,11 +25,12 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pytest
+        pip install --upgrade -r Backend/requirements.txt
       
-    - name: Install dependencies
-      run: pip install --upgrade -r Backend/requirements.txt
 
-    - name: Run tests
-      run: |
-        cd Backend
-        pytest 
+    - name: change 
+      run:  cd Backend
+    
+    - name: run tests
+      run:  pytest 
+         
