--- a/.github/workflows/Backend.yml
+++ b/.github/workflows/Backend.yml
@@ -30,7 +30,8 @@ jobs:
 
     - name: change 
       run:  cd Backend
-    
+    - name: Print directory contents
+      run: ls -R
     - name: run tests
       run:  pytest test_app.py
-         
+        
