--- a/.github/workflows/Backend.yml
+++ b/.github/workflows/Backend.yml
@@ -26,12 +26,17 @@ jobs:
         python -m pip install --upgrade pip
         pip install pytest
         pip install --upgrade -r Backend/requirements.txt
-      
+
+    - name: Print directory contents
+      run: ls
 
     - name: change 
       run:  cd Backend
+      
     - name: Print directory contents
       run: ls
+
+      
     - name: run tests
       run:  pytest test_app.py
         
