--- a/.github/workflows/Backend.yml
+++ b/.github/workflows/Backend.yml
@@ -25,6 +25,11 @@ jobs:
         python -m pip install --upgrade pip
         pip install pytest
         pip install --upgrade -r Backend/requirements.txt
+    - name: Print Python Info
+      run: |
+        python --version
+        pip list
+
     - name: change 
       run:  cd Backend
       
