--- a/.github/workflows/Backend.yml
+++ b/.github/workflows/Backend.yml
@@ -34,5 +34,19 @@ jobs:
       run:  cd Backend
       
     - name: run tests
-      run:  pytest Backend/test_app.py 
+      run:  pytest Backend/test_app.py
+    
+    - name: Execute app.py
+      run: python Backend/app.py &
+      env:
+        PORT: 5001  
+
+    - name: Wait for app to start
+      run: sleep 5
+
+    - name: Check if app is running
+      run: curl http://localhost:$PORT
+
+    - name: Kill the app
+      run: pkill -f "python app.py" 
         
