--- a/.github/workflows/Build_frontend_image.yml
+++ b/.github/workflows/Build_frontend_image.yml
@@ -17,12 +17,13 @@ jobs:
    #  - name: Print directory contents
   #  run: ls -R
 
-
+      # Build the Docker image
     - name: Build the Docker image
       run: docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/frontend:latest ./Frontend
+     # Login to Docker Hub
     - name: Login to Docker Hub
       run: echo "${{ secrets.DOCKER_HUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
 
-
+      # Push the Docker image to Docker Hub
     - name: Push the Docker image to Docker Hub
       run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/frontend:latest
